# Ai_driven_developmwnt_hagathon

./: .gitignore  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  cloud-chatbot.html  debug-chatbot.html  simple-chatbot-test.html  test-chatbot.html
.claude/: settings.local.json
.specify/memory/: constitution.md
Frontend/: docusaurus.config.js  run-setup-plan.ps1  sidebars.js
Frontend/.claude/: settings.local.json
Frontend/docs/: capstone-project.md  intro.md  weekly-breakdown.md
Frontend/docs/module-2-digital-twin/: gazebo-unity-research.md
Frontend/docs/module-3-isaac-sim-ros/: isaac-research.md
Frontend/src/pages/: chatkit-inject.js
Frontend/static/js/: chatbot-integration.js
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/.claude/: settings.local.json
backend/docs/: README.md  docusaurus.config.js  intro.md  package-lock.json  package.json  sidebars.js
backend/docs/.github/workflows/: deploy.yml
backend/docs/src/components/HomepageFeatures/: index.js
backend/docs/src/pages/: index.js
backend/history/adr/: 001-documentation-platform-and-deployment-strategy.md
backend/history/prompts/general/: 1-create-github-pages-deployment.general.prompt.md
backend/src/: config.py  main.py
backend/src/api/: chatkit_endpoints.py
backend/src/middleware/: error_handler.py
backend/src/models/: conversation.py  message.py  rag.py
backend/src/services/: chatkit_server.py  content_relationship_service.py  gemini_service.py  rag_service.py  storage_service.py
backend/src/utils/: auth.py  rate_limit.py  validation.py
backend/tests/contract/: test_api_contract.py
backend/tests/e2e/: test_chat_e2e.py
backend/tests/integration/: test_chat_integration.py  test_navigation_integration.py  test_search_integration.py
backend/tests/unit/: test_models.py  test_navigation.py  test_search.py
docs/: .gitignore  capstone-project.md  docusaurus.config.js  lab-guides.md
docs/.github/workflows/: deploy.yml
docs/docs/: physical-ai-overview.md
docs/docs/module-1-ros2/: index.md
docs/docs/module-4-vla/: index.md  vla-research.md
docs/module-1-ros2/: index.md
docs/module-1-ros2/labs/: lab1.md  lab2.md  lab3.md  lab4.md  lab5.md
docs/module-2-digital-twin/: index.md
docs/module-2-digital-twin/labs/: lab1.md  lab2.md  lab3.md  lab4.md  lab5.md
docs/module-3-isaac-sim-ros/: index.md
docs/module-3-isaac-sim-ros/labs/: lab1.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md
docs/module-4-vla/: index.md
docs/module-4-vla/labs/: lab1.md
frontend/: docusaurus.config.js  package.json  run-check.ps1  sidebars.js
frontend/.github/workflows/: gh-pages.yml  main.yml
frontend/docs/: glossary.md  hardware-appendix.md  preface.md  sim-to-real.md
frontend/docs/module-1-ros2/: index.md  ros2-research.md
frontend/docs/module-2-digital-twin/: index.md
frontend/docs/module-3-isaac-sim-ros/: index.md
frontend/docs/module-4-vla/: index.md
frontend/static/diagrams/: book_architecture_description.md
history/prompts/chatkit-gemini-rag-integration/: 1-create-chatkit-gemini-rag-spec.spec.prompt.md  2-plan-chatkit-gemini-rag.spec.prompt.md  3-generate-tasks-chatkit-gemini-rag.tasks.prompt.md
history/prompts/constitution/: 001-update-ai-spec-driven-book-constitution.constitution.prompt.md
history/prompts/general/: 001-implement-phase-1-2.general.prompt.md  002-failed-to-implement-due-to-missing-plan.md.general.prompt.md  002-implement-phase-3-module-1.general.prompt.md  003-failed-to-implement-due-to-missing-tasks.md.general.prompt.md
history/prompts/physical-ai-humanoid-robotics-book/: 0001-implement-phase-6-for-module-4-vla.red.prompt.md  006-create-plan-for-physical-ai-humanoid-robotics-book.plan.prompt.md  007-create-tasks-for-physical-ai-humanoid-robotics-book.tasks.prompt.md  008-implement-phase-4-tasks-for-module-2-digital-twin.red.prompt.md  009-implement-phase-5-tasks-for-module-3-isaac-sim.red.prompt.md
history/prompts/the-robotic-nervous-system-ros2/: 002-create-spec-for-ros2-chapter.spec.prompt.md
specs/001-chatkit-gemini-rag-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/physical-ai-humanoid-robotics-book/: plan.md  spec.md  tasks.md
specs/the-ai-robot-brain-nvidia-isaac-simulation-isaac-ros/: spec.md
specs/the-digital-twin-simulation-environments/: spec.md
specs/the-robotic-nervous-system-ros2/: spec.md
specs/vision-language-action-for-humanoid-robotics/: spec.md
src/digital_twin_examples/lab2/: humanoid_control.yaml  humanoid_gazebo.urdf.xacro  package.xml  spawn_humanoid.launch.py
src/digital_twin_examples/lab4/: CMakeLists.txt  README.md  export_meshes.py  package.xml  setup.py  unity_setup_guide.md
src/digital_twin_examples/lab4/launch/: gazebo_world.launch.py  unity_bridge.launch.py
src/digital_twin_examples/lab4/scripts/: unity_bridge_node.py
src/digital_twin_examples/lab4/urdf/: humanoid_robot.urdf
src/digital_twin_examples/lab4/worlds/: unity_export_world.sdf
src/isaac_examples/: CMakeLists.txt  README.md  package.xml  setup.py
src/ros2_package_examples/: CMakeLists.txt  README.md  package.xml  setup.py
src/ros2_package_examples/lab1/: README.md  package.xml  setup.py  simple_node.py
src/ros2_package_examples/lab2/: README.md  package.xml  setup.py  talker_node.py
src/ros2_package_examples/lab3/: README.md  display.launch.py  humanoid.urdf  package.xml
src/ros2_package_examples/lab4/: README.md  joint_control.launch.py  joint_controller.py  package.xml  setup.py
src/ros2_package_examples/lab5/: README.md  RobotCommand.action  llm_client.py  package.xml  setup.py
src/ros2_package_examples/ros2_package_examples/: __init__.py  advanced_joint_controller.py  listener_node.py  llm_interface.py  robot_executor_server.py
src/vision_language_action_examples/: CMakeLists.txt  README.md  package.xml  setup.py
src/vla_agents/: CMakeLists.txt  README.md  package.xml  setup.py
(+81 files in other folders)
