[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Syed NoorAlam", email = "160272348+FcnAshir@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
